# proyecto_final

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  tests_images.py  tests_mymail.py
docs/source/: conf.py  index.rst  src.rst
src/proyectoFinalJoseph/: images.py  mymail.py
